--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="#home">Trang chủ</a></li>
                     <li><a href="#products">Sản phẩm</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                     <li><a href="#cart">Giỏ hàng (<span id="cart-count">0</span>)</a></li>
                     <li id="authNav">
                         <a href="login.html" class="btn-login">Đăng nhập</a>
