--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="profile.html" class="active">Hồ sơ</a></li>
+                    <li id="adminNavLink" style="display: none;"><a href="admin.html" style="background: #ff6b00; color: white; padding: 8px 16px; border-radius: 4px;">⚙️ Quản trị</a></li>
                     <li><a href="#" id="logoutBtn">Đăng xuất</a></li>
                 </ul>
             </nav>
