--- a/frontend/product-detail-new.html
+++ b/frontend/product-detail-new.html
@@ -188,6 +188,6 @@
     </footer>
 
     <!-- Single JavaScript file with all functionality -->
-    <script src="js/product-detail.js"></script>
+    <script src="js/product-detail-new.js"></script>
 </body>
 </html>
