--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -77,6 +77,39 @@
                         </div>
                     </div>
 
+                    <!-- Revenue Analytics -->
+                    <div class="section" style="margin-top: 30px;">
+                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                            <h3>Thống kê doanh thu</h3>
+                            <div style="display: flex; gap: 10px;">
+                                <select id="revenuePeriod" style="padding: 8px 12px; border: 2px solid #000; border-radius: 4px;">
+                                    <option value="month">Theo tháng</option>
+                                    <option value="week">Theo tuần</option>
+                                    <option value="year">Theo năm</option>
+                                </select>
+                                <select id="revenueYear" style="padding: 8px 12px; border: 2px solid #000; border-radius: 4px;">
+                                    <!-- Will be populated by JS -->
+                                </select>
+                                <select id="revenueMonth" style="padding: 8px 12px; border: 2px solid #000; border-radius: 4px; display: none;">
+                                    <option value="1">Tháng 1</option>
+                                    <option value="2">Tháng 2</option>
+                                    <option value="3">Tháng 3</option>
+                                    <option value="4">Tháng 4</option>
+                                    <option value="5">Tháng 5</option>
+                                    <option value="6">Tháng 6</option>
+                                    <option value="7">Tháng 7</option>
+                                    <option value="8">Tháng 8</option>
+                                    <option value="9">Tháng 9</option>
+                                    <option value="10">Tháng 10</option>
+                                    <option value="11">Tháng 11</option>
+                                    <option value="12">Tháng 12</option>
+                                </select>
+                                <button id="loadRevenueBtn" class="btn-primary" style="padding: 8px 16px;">Xem</button>
+                            </div>
+                        </div>
+                        <div id="revenueChart"></div>
+                    </div>
+
                     <div class="dashboard-sections">
                         <div class="section">
                             <h3>Đơn hàng gần đây</h3>
@@ -188,5 +221,6 @@
     </div>
 
     <script src="js/admin.js"></script>
+    <script src="js/admin-revenue.js"></script>
 </body>
 </html>
